--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 	"sideEffects": false,
 	"scripts": {
 		"build": "cd source && tsc && cd ..",
-		"declare": "cd declare && node index.js && cd ../source && tsc --noEmit && cd ..",
+		"declare": "cd declare && npx environment node index.js && cd ../source && tsc --noEmit && cd ..",
 		"preversion": "npm run declare && npm run build"
 	},
 	"license": "GPL-3.0-only",
